[2025-04-22 21:01:19]	No se encontró una version válida	Completamente editables Items desde vista Calc
[2025-04-22 23:42:36]	No se encontró una version válida	Automatic update
[2025-04-23 08:31:29]	No se encontró una version válida	Nueva vista para editar items en modal
[2025-06-02 18:17:59]	No se encontró una version válida	Previo nuevas vistas
[2025-06-03 00:28:16]	No se encontró una version válida	GRADLE configurado para JETPACk COMPOSE
[2025-06-03 21:12:28]	No se encontró una version válida	COMPILA con JetPack Compose y Desugaring
[2025-06-04 10:36:45]	No se encontró una version válida	Automatic update
[2025-06-04 10:45:02]	No se encontró una version válida	Eliminado file dupe
[2025-06-08 15:08:56]	No se encontró una version válida	Incluida referencias a los .jar como dependences en app/build.gradle.kts
[2025-06-08 15:49:55]	No se encontró una version válida	.jar included
[2025-06-08 16:21:16]	No se encontró una version válida	Automatic update
[2025-06-08 18:37:11]	No se encontró una version válida	Automatic update
[2025-06-08 22:19:30]	No se encontró una version válida	Automatic update
[2025-06-09 01:52:19]	No se encontró una version válida	Automatic update
[2025-06-09 12:49:45]	No se encontró una version válida	Se ha creado utilidad SystemUtils.isEmulator()
[2025-06-09 14:42:25]	No se encontró una version válida	Vista dummy de Scanner OK
[2025-06-09 16:46:34]	No se encontró una version válida	Previo update de vista de Products e Inventory
[2025-06-09 16:55:40]	No se encontró una version válida	UPDATE de vistas de Products, Inventory y Customers --OK
[2025-06-09 19:03:23]	No se encontró una version válida	Automatic update
[2025-06-09 19:26:12]	No se encontró una version válida	PAGOS OK
[2025-06-09 20:11:09]	No se encontró una version válida	Previo trabajar en Reports
[2025-06-09 20:39:28]	No se encontró una version válida	Reportes incluidos
[2025-06-29 13:13:52]	No se encontró una version válida	Historial de transacciones